# Rag-System

./: .gitignore  main.py  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
configs/: chunking.yaml  embeddings.yaml  rag.yaml
data/vectorstore/: chroma.dvc
src/api/: app.py  dependencies.py  routes.py
src/core/config/: mlflow_config.py
src/core/logging/: logging_config.py
src/experiments/: chunk_documents.py  embed_documents.py
src/ingestion/: cleaner.py  pdf_loader.py  run.py
src/rag/: chain.py  prompt.py  retriever.py  run.py
tests/unit/: test_api_dependencies.py  test_api_imports.py  test_chunking.py  test_embeddings.py  test_ingestion.py  test_rag_chain.py  test_rag_prompt.py  test_sanity.py
